mem-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mem-pod
spec:
  containers:
  - name: quota-mem-cpu-demo-ctr
    image: nginx
    resources:
      limits:
        memory: "50Mi"
        cpu: "800m"
      requests:
        memory: "20Mi"
        cpu: "400m"
