clusterip.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      labels:
        app: myapp1
    spec:
      containers:
      - name: myapp-cont
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc-demo
spec:
  type: ClusterIP  ## this is default if we do not type in service definition
  selector:
    app: myapp1
  ports:
   - protocol: TCP
     port: 8080
