default-deny-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: nginx
spec:
  podSelector:
    matchLabels:
      tier: nginx
  Ingress:
    - from:
      - podSelector:
         matchLabels:
           tier: busy
